--- a/pls_regression.Rmd
+++ b/pls_regression.Rmd
@@ -19,18 +19,18 @@ library(tidyverse)
 
 ```{r}
 set.seed(111)
-Sigma <- diag(c(8,2,6,4),4,4)
-Sigma[1,2]=1.5
-Sigma[2,1]=1.5#X1 and x2 are correlated 
-X =MASS::mvrnorm(n=100, c(2, 2,2,3), Sigma)%>%as.data.frame()
+Sigma.matrix <- diag(c(8,2,6,4),4,4)
+Sigma.matrix[1,2]=1.5
+Sigma.matrix[2,1]=1.5#X1 and x2 are correlated 
+X =MASS::mvrnorm(n=100, c(2, 2,2,3), Sigma.matrix)%>%as.data.frame()
 colnames(X)=c("X1","X2","X3","X4")
 X1 =X[,1]
 X2 =X[,2]
 X3 =X[,3]
 X4= X[,4]
 #generate Y
-eps = rnorm(100,mean=0,sd=2)
-Y = 2+8*X1+0.75*X4+eps
+Y = rnorm(100,mean(X[,2]),2)
+X = scale(X)
 data=data.frame(X,Y)
 ```
 
@@ -62,6 +62,8 @@ pls_update_comp = function(X,Y,m){
 
 ##do regression
 pls_regression= function(X,Y,m){
+  X=as.matrix(X)
+  Y=as.matrix(Y)
   Z=pls_update_comp(X,Y,m)
   Y_predict= rep(0,nrow(Y))
   for (i in 1:m) {
@@ -77,9 +79,10 @@ pls_regression= function(X,Y,m){
 
 ##compare with R package
 ```{r}
+set.seed(111)
 X=as.matrix(X)
 Y=as.matrix(Y)
-R_pls = plsr(Y~., data = data,scale=F)
+R_pls = plsr(Y~., data = data)#scale by default
 R_pls$ncomp # four components
 self_pls = pls_update_comp(X,Y,4)
 self_fitted = pls_regression(X,Y,4)
@@ -99,6 +102,10 @@ for (i in 1:4) {
   direction[i]=c
 }
 
+direction
+
 
 ```
 
+
+We can see from the comparing that the component directions from R pls package and the pls function we write are the same. And the RMSE of the self-deveopled function is lower than the one implemented in pls package.
